--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
-.App {
-  text-align: center;
+body {
+  height: 100vh;
+  min-width: 100vh;
+  border: solid red 1px;
+  /* overflow: hidden; */
 }
